--- a/egts.cbp
+++ b/egts.cbp
@@ -8,7 +8,6 @@
 		<Build>
 			<Target title="Release">
 				<Option output="egts" prefix_auto="1" extension_auto="1" />
-				<Option object_output=".objs" />
 				<Option type="1" />
 				<Option compiler="gcc" />
 				<Compiler>
@@ -31,9 +30,10 @@
 		<Unit filename="main.c">
 			<Option compilerVar="CC" />
 		</Unit>
-		<Extensions>
-			<code_completion />
-			<debugger />
-		</Extensions>
+		<Unit filename="mysqlConnector.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="mysqlConnector.h" />
+		<Extensions />
 	</Project>
 </CodeBlocks_project_file>
